--- a/MS.Operation/src/MS.Operation.API/MS.Operation.API.csproj
+++ b/MS.Operation/src/MS.Operation.API/MS.Operation.API.csproj
@@ -9,8 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.2105168" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Operation.Application\MS.Operation.Application.csproj" />
+    <ProjectReference Include="..\MS.Operation.Domain\MS.Operation.Domain.csproj" />
   </ItemGroup>
 
 </Project>
