--- a/MS.Operation/src/MS.Operation.Application/MS.Operation.Application.csproj
+++ b/MS.Operation/src/MS.Operation.Application/MS.Operation.Application.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.10" />
+  </ItemGroup>
+
 </Project>
