Configura Cors, Gzip, Caching e Injeção de Dependência

--- a/MS.Operation/src/MS.Operation.Application/MS.Operation.Application.csproj
+++ b/MS.Operation/src/MS.Operation.Application/MS.Operation.Application.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Operation.Infrastructure\MS.Operation.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
