--- a/MS.Operation/src/MS.Operation.Infrastructure/MS.Operation.Infrastructure.csproj
+++ b/MS.Operation/src/MS.Operation.Infrastructure/MS.Operation.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Operation.Domain\MS.Operation.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
