--- a/MS.Operation/test/MS.Operation.Domain.Test/MS.Operation.Domain.Test.csproj
+++ b/MS.Operation/test/MS.Operation.Domain.Test/MS.Operation.Domain.Test.csproj
@@ -8,11 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MS.Operation.Domain\MS.Operation.Domain.csproj" />
   </ItemGroup>
 
 </Project>
